--- a/개발자를위한레디스/박현두/7장_레디스_백업.md
+++ b/개발자를위한레디스/박현두/7장_레디스_백업.md
@@ -8,9 +8,9 @@
 
 1. AOF : 레디스 인스턴스가 처리한 모든 쓰기 작업을 차례대로 기록, 복원 시에는 파일을 다시 읽어가며 데이터 세트 구성
 2. RDB : 일정 시점에 메모리에 저장된 데이터 전체를 저장
-    
-    ![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/ea52584e-7bb6-4015-9bf6-616a274cb8a6/d61efbc7-6ed7-470e-ba8d-190e434cba9f/image.png)
-    
+   
+    ![image](https://github.com/user-attachments/assets/d8e3150f-d6a9-4ac0-b269-823a50415887)
+
 
 RDB는 바이너리 형태로 저장되고, AOF는 레디스 프로토콜 형태로 저장된다.
 
