--- a/개발자를위한레디스/박현두/8장_복제.md
+++ b/개발자를위한레디스/박현두/8장_복제.md
@@ -18,7 +18,8 @@
     REPLICAOF <master_ip> <master_port>
 ```
 
-![img.png](img.png)
+![img](https://github.com/user-attachments/assets/506c8994-3edf-4898-9683-24ab2f6e6670)
+
 
 * 항상 하나의 마스터 노드가 존재하며, 업데이드 커맨드는 마스터 노드에서만 수행할 수 있다.
 * 복제 노드는 읽기만 가능하다.
@@ -34,7 +35,8 @@
     * 7버전 이후
     * repl-diskless-sync : 기본값 yes 디스크를 사용하지 않고 복제
     * repl-diskless-load : 기본값 disabled RDB 스냅숏 데이터를 바로 메모리에 로드하지 않고 디스크에 저장
-    ![img_1.png](img_1.png)  
+   ![img_1](https://github.com/user-attachments/assets/98608f4b-388e-4101-9fe9-e4fb4ec81e02)
+
     * 하나의 복제가 연결중에 다른 복제본은 연결할 수 없음.
   ```redis
     repl-diskless-sync-delay 5 # 5초 지연 
@@ -47,7 +49,8 @@
     INFO REPLICATION # 복제 ID 확인
   ```
   결과 예시
- ![img_2.png](img_2.png)
+![img_2](https://github.com/user-attachments/assets/8b446323-26d5-49ee-8bba-e0f94fc8f0df)
+
 
 * 부분 재동기화
   * 복제 연결이 끊길 때 마다 전체 데이터를 다시 복제하는 것은 비효율적이다.
@@ -61,8 +64,7 @@
   * A가 장애가 발생하여 B가 마스터로 승격되면 B는 새로운 복제 ID를 가진다.
   * 복제 ID가 동일하다는 것은 동일한 데이터를 가지고 있다는 것을 의미한다.
 
-![img_3.png](img_3.png)
-
+![img_3](https://github.com/user-attachments/assets/30e87af2-9657-4274-85ac-b0982f88e59c)
 
 * 백업을 사용하지 않는 경우에서의 데이터 복제
   * 레디스에서 복제를 사용하는 경우 마스터와 복제본에서 백업 기능을 사용하는 것이 좋다.
