--- a/개발자를위한레디스/이진모/클러스터.md
+++ b/개발자를위한레디스/이진모/클러스터.md
@@ -69,3 +69,22 @@ Redis에서의 확장은 스케일 업보다는 스케일 아웃을 중심으로
 user:{123}:name, user:{123}:profile → 같은 해시슬롯에 저장.
 ```
 
+## 5. 자동 재구성(Auto-Reconfiguration)
+- Redis 클러스터는 **고가용성(HA)**을 보장하기 위해 자동으로 노드를 재구성합니다.
+- 장애가 발생한 마스터 노드는 다른 슬레이브 노드가 마스터로 승격되며, 클러스터가 재구성됩니다.
+- 클러스터 내의 모든 노드는 서로 상태를 감시하며, 장애 발생 시 **자동 페일오버(Failover)**를 수행합니다.
+
+### 5-1. 자동 페일오버(Failover)
+- 마스터 노드가 장애로 인해 응답하지 않을 경우, 해당 마스터 노드에 연결된 슬레이브 중 하나가 투표 과정을 거쳐 마스터로 승격됩니다.
+- 투표 메커니즘:
+  - 클러스터 내 과반수 이상의 마스터 노드가 장애 상태를 확인하고 투표로 새 마스터를 결정.
+ 
+### 5-2. 복제본 마이그레이션(Replica Migration)
+- 특정 마스터에 복제본(slave)이 부족한 경우, 다른 마스터의 복제본을 재배치하여 균형을 맞춥니다.
+- Redis 설정 옵션:
+```
+cluster-allow-replica-migration yes: 복제본 마이그레이션 허용.
+cluster-migration-barrier N: 최소 N개의 복제본이 있어야 마이그레이션 진행.
+```
+
+
