--- a/개발자를위한레디스/이진모/클러스터.md
+++ b/개발자를위한레디스/이진모/클러스터.md
@@ -86,5 +86,56 @@ user:{123}:name, user:{123}:profile → 같은 해시슬롯에 저장.
 cluster-allow-replica-migration yes: 복제본 마이그레이션 허용.
 cluster-migration-barrier N: 최소 N개의 복제본이 있어야 마이그레이션 진행.
 ```
+### 5-3. 클러스터에서의 Redis-cli 사용
 
+- redis-cli 명령어를 사용해 클러스터 모드에서 데이터 저장 시, 키의 해시 슬롯을 기반으로 적절한 노드로 리다이렉션.
+- -c 옵션을 사용하면 리디렉션 과정을 자동 처리.
+```
+예시: set user:1 true 시, MOVED 메시지가 발생하며 해당 슬롯이 있는 노드로 데이터 이동.
+```
+### 5-4 Failover 테스트
 
+- 수동으로 페일오버시키려면 페일오버시키고자 하는 마스터에 1개 이상의 복제본이 연결돼 있어야 한다.
+- 수동 페일오버가 진행되는 동안 기존 마스터에 연결된 클라이언트는 잠시 블락된다.
+- 페일오버가 완료되면 클러스터의 정보를 변경하고, 모든 작업이 완료되면 클라이언트는 새로운 마스터로 리디렉션된다.
+
+자동 페일오버
+- 클러스터 구조에서 복제본은 redis.conf에 지정한 cluster-node-timeout시간 동안 마스터에서 응답이 오지 않으면 마스터의 상태가 정상적이지 않다고 판단해 페일오버를 트리거 한다.
+
+## 6. 레디스 클러스터 운영하기
+### 6-1. 클러스터 리샤딩
+- 리샤딩 정의 및 목적:
+
+  - 리샤딩은 마스터 노드의 해시 슬롯 중 일부를 다른 마스터로 이동시키는 과정입니다.
+  - 리샤딩은 노드 간의 데이터 분배를 재조정하여 성능과 균형을 유지합니다.
+
+- 리샤딩 과정:
+
+- Redis CLI 명령어 사용:
+```
+redis-cli --cluster reshard <IP>:<PORT>
+```
+- 이동할 슬롯 수와 데이터를 받을 노드 ID를 입력.
+- all을 입력하면 소스 노드를 자동으로 선택하며, 특정 노드를 지정할 수도 있음.
+- 확인 후 yes를 입력하면 리샤딩 작업이 진행됩니다.
+
+### 6-2. 클러스터 리사이징 - 간단 버전
+- redis-cli 명령어를 사용해 클러스터 내 슬롯을 자동으로 이동시킬 수 있음.
+- --cluster-from, --cluster-to와 같은 옵션을 지정해 슬롯 이동 경로를 설정하며, --cluster-yes로 모든 프롬프트를 자동으로 진행 가능.
+- 슬롯 이동 작업이 끝난 후 cluster nodes 명령어로 상태를 확인.
+
+### 6-3 클러스터 확장 - 신규 노드 추가
+- 신규 노드를 클러스터에 추가하려면 redis-cli --cluster add-node 명령어를 사용.
+- 신규 마스터 또는 복제본 노드를 추가 가능.
+- 새 노드를 추가할 경우 기존 노드의 상태를 확인하고 연결 설정을 검증해야 함.
+- 복제본으로 추가하려면 --cluster-slave 옵션을 사용, 특정 마스터에 연결하려면 --cluster-master-id를 지정.
+
+### 6-4. 노드 제거
+- 노드를 클러스터에서 제거하려면 redis-cli --cluster del-node 명령어를 사용.
+- 노드 제거 전 해당 노드의 데이터를 다른 노드로 리샤딩하거나 역할을 복제본으로 변경해야 함.
+
+### 6-5. CLUSTER RESET
+- SOFT와 HARD 두 가지 옵션 제공.
+- SOFT: 데이터 삭제 없이 구성 초기화.
+- HARD: 데이터와 구성 모두 삭제.
+  
